<resources>
    <string name="app_name" translatable="false">ElimuGo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>

    <string name="home_fragment_description">Select an ElimuGo functionality.</string>
    <string name="home_fragment_share_content_button">Share content</string>
    <string name="home_fragment_download_button">Download content</string>
    <string name="home_fragment_explore_button">Explore content</string>
    <string name="share_fragment_title">Share content</string>
    <string name="home_fragment_share_app_button">Share app</string>
    <string name="ip_address" translatable="false">IP address</string>
    <string name="network_name" translatable="false">SSID</string>
    <string name="network_password" translatable="false">Network password</string>
    <string name="select_fragment_title">Select source</string>
    <string name="select_fragment_description">Choose a source to connect to and download from.</string>
    <string name="select_fragment_website_button">Connect to Elimu.Online</string>
    <string name="select_fragment_mobile_button">Connect to another ElimuGO app</string>
    <string name="select_fragment_pi_button">Connect to a local ElimuPi</string>
    <string name="retrieve_fragment_title">Content modules</string>
    <string name="retrieve_fragment_description">Select content you want to download</string>
    <string name="retrieve_fragment_connected_to">Connected to </string>
    <string name="retrieve_fragment_connecting_to">Connecting to </string>
    <string name="retrieve_fragment_disconnect">Disconnect</string>
    <string name="download_status_fragment_validity_check">Checking content module validity…</string>
    <string name="download_status_fragment_download_in_progress">Download in progress…</string>
    <string name="download_status_fragment_download_complete">Download complete.</string>
    <string name="share_fragment_description">Show this QR-code to the one you would like to share your content with.</string>
    <string name="explore_fragment_title">Explore content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="textview">Test Language test english</string>


    <!-- TODO: Remove or change this placeholder text -->

</resources>