<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:id="@+id/home_select_functionality"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:text="@string/home_fragment_description"
            android:textAlignment="center"

            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/home_explore"



                    android:layout_margin="@dimen/_10sdp"

                    android:layout_width="@dimen/_130sdp"

                    android:layout_height="@dimen/_130sdp"
                    android:text="@string/home_fragment_explore_button"
                    app:cornerRadius="24dp" />

                <Button
                    android:id="@+id/home_download"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"

                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/home_fragment_download_button"
                    app:cornerRadius="24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/home_share_app"
                    android:layout_margin="@dimen/_10sdp"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:text="@string/home_fragment_share_app_button"
                    app:cornerRadius="24dp" />

                <Button
                    android:id="@+id/home_share"
                    android:layout_margin="@dimen/_10sdp"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:text="@string/home_fragment_share_content_button"
                    app:cornerRadius="24dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>